# second-brain-exercise

./: .coveragerc  .flake8  .gitignore  .instructions.md  .pylintrc  CLAUDE.md  EXERCISE.md  mypy.ini  pyproject.toml  readme.md  requirements.txt
.claude/: settings.json  settings.local.json
.claude/commands/: config.md  conventions.md  dependency-injection.md  error-handling.md  hateoas.md  jwt-authentication.md  project-structure.md  python-clean-code-solid.md  python-integration-testing.md  python-pep8-conventions.md  python-typing.md  python-unit-testing.md  serialization.md  sqlalchemy-repositories.md  testing-conventions.md
.claude/commands/python-pep8-conventions-scripts/: pyproject.toml
.github/: CI-CD.md
.github/workflows/: quality-checks.yml
docs/: architecture.md  jwt_security.md  pagination.md
source/: app.py  architecture.md  config.py  container.py  create_app.py
source/config/: __init__.py  app_config.py  config.py  flask_config.py
source/controllers/: __init__.py  auth_controller.py  greeting_controller.py  root_controller.py  tasks_controller.py
source/models/: __init__.py  filtered_list.py  greeting.py  task.py  task_cursor.py  task_filters.py  task_sort.py  user.py
source/repositories/: __init__.py  create_task_repository.py  delete_task_repository.py  fake_task_repository.py  fake_user_repository.py  get_all_tasks_repository.py  get_task_repository.py  get_user_by_username_repository.py  register_user_repository.py  update_task_repository.py
source/services/: __init__.py  create_task_service.py  delete_task_service.py  (+7 more)
(+163 files in other folders)
